# request-ddi

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Dockerfile  README.md  codemeta.json  db.sqlite3  delete_table.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  release.yml  step_build.yml  step_lint.yml  step_test.yml
app/: admin.py  api_urls.py  apps.py  context_processors.py  dataImporter.py  documents.py  forms.py  health_checks.py  models.py  parser.py  signals.py  tests.py  urls.py  views.py  views_ajax.py
app/management/commands/: clear_db.py
app/middleware/: logging_responsetime.py
app/migrations/: 0001_initial.py  0002_alter_bindingsurveyrepresentedvariable_variable_name.py  0002_survey_date.py  0003_remove_category_type_and_more.py  0003_rename_publisher_distributor_and_more.py  0004_alter_representedvariable_type_categories.py  0004_publisher_alter_representedvariable_type_categories_and_more.py  0004_remove_serie_abstract_remove_serie_distributor_and_more.py  0005_remove_collection_abstract_and_more.py  0005_serie.py  0006_bindingsurveyrepresentedvariable_serie.py  0006_survey_language.py  0007_remove_collection_serie_remove_survey_serie_and_more.py  0007_survey_serie.py  0008_remove_survey_serie.py  0008_rename_date_survey_date_last_version_survey_author_and_more.py  0009_alter_concept_name_alter_distributor_name_and_more.py  0009_alter_survey_external_ref.py  0009_remove_bindingsurveyrepresentedvariable_serie_and_more.py  0010_bindingsurveyrepresentedvariable_is_indexed.py  0010_serie_photo.py  0011_conceptualvariable_is_unique_and_more.py  0011_serie_abstract_serie_publisher_alter_serie_name.py  0012_bindingsurveyrepresentedvariable_unique_variable_name_per_survey_and_more.py  0012_publisher.py  0013_bindingvariablecategorystat.py  0013_convert_publisher_text_to_object.py  0014_alter_serie_publisher.py  0014_remove_collection_photo_remove_subcollection_photo.py  0015_category_missing.py
app/static/css/: base.css  homepage.css  question_detail.css  search_results.css
app/static/js/: export.js  homepage.js  question_detail.js  search_elastic.js  upload_csv_collection.js
app/templates/: base.html  collection_detail.html  collection_subcollections.html  create_serie.html  export_csv.html  homepage.html  list_surveys.html  login.html  question_detail.html  representedvariable_list.html  search_results.html  serie_detail.html  serie_surveys.html  survey_list.html  upload_csv.html  upload_csv_collection2.html  upload_files.html  upload_success.html  upload_xml.html
app/templatetags/: custom_tags.py  language_tags.py
app/test_files/: fr_cdsp_ddi_elipss_ea21.xml
app/tests/: __init__.py  test_detail_views.py  test_export_views.py  test_filter_views.py  test_models.py  test_parser.py  test_search_views.py  test_upload_views.py  test_utils_views.py
app/utils/: csvimportexport.py  normalize_string.py  sort.py  timing.py
app/views/: auth_views.py  detail_views.py  export_views.py  filter_views.py  mixins.py  search_views.py  upload_views.py  utils_views.py
basedequestions/: asgi.py  settings.py  urls.py  views.py  wsgi.py
config/: asgi.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
decorators/: timer.py
k8s/base/: kustomization.yml  namespace.yml
k8s/base/backend/: deployment.yml
k8s/base/basedequestions/: deployment-nginx-media.yml  deployment.yml  ingress.yml  media-service.yml  service-nginx-ingress.yml  service-nginx-media.yml  service.yml
k8s/base/db/: db-pvc.yml  deployment.yml  service.yml
k8s/base/elasticsearch/: configmap.yml  deployment.yml  service.yml
k8s/base/nginx-media/: deployment.yml  nginx-configmap.yml  service.yml
k8s/overlays/pprd/: elasticsearch-patch.yml  elasticsearch-pvc.yml  ingress-patch.yml  ingress.yml  kustomization.yml  media-ingress.yml  media-pvc.yml  namespace.yml  patch-elasticsearch-ipclock.yaml  pvc.yml
k8s/overlays/prod/: elasticsearch-configmap-patch.yml  elasticsearch-patch.yml  elasticsearch-pvc.yml  ingress-patch.yml  ingress.yml  kustomization.yml  namespace.yml
locale/en/LC_MESSAGES/: django.mo  django.po
request_ddi/: admin.py  api_urls.py  apps.py  context_processors.py  health_checks.py  manage.py  urls.py
request_ddi/core/: data_importer.py  documents.py  forms.py  models.py  parser.py  signals.py
request_ddi/management/commands/: cleardb.py  (+1 more)
request_ddi/middleware/: logging.py
request_ddi/migrations/: 0001_initial.py  0002_survey_date.py  0003_rename_publisher_distributor_and_more.py  0004_remove_serie_abstract_remove_serie_distributor_and_more.py  0005_remove_collection_abstract_and_more.py  0006_survey_language.py  0007_remove_collection_serie_remove_survey_serie_and_more.py  0008_rename_date_survey_date_last_version_survey_author_and_more.py  0009_alter_concept_name_alter_distributor_name_and_more.py  0010_bindingsurveyrepresentedvariable_is_indexed.py  0011_conceptualvariable_is_unique_and_more.py  0012_bindingsurveyrepresentedvariable_unique_variable_name_per_survey_and_more.py  0013_bindingvariablecategorystat.py  0014_remove_collection_photo_remove_subcollection_photo.py  0015_category_missing.py
request_ddi/templates/: base.html  export_csv.html  homepage.html  question_detail.html  search_results.html  upload_csv.html  upload_xml.html
request_ddi/templatetags/: custom_tags.py  language_tags.py
request_ddi/test_files/: data_EA_19_to_23_complete.csv  fr.cdsp.ddi.elipss.ea2023.xml  fr_cdsp_ddi_elipss_ea22.xml
request_ddi/tests/: __init__.py  test_detail_views.py  test_export_views.py  test_filter_views.py  test_models.py  test_parser.py  test_search_views.py  test_upload_views.py  test_utils_views.py
request_ddi/utils/: csvimportexport.py  db_logging.py  normalize_string.py  sort.py  timer.py  timing.py
request_ddi/views/: auth_views.py  detail_views.py  export_views.py  filter_views.py  mixins.py  search_views.py  upload_views.py  utils_views.py
utils/: db_logging.py
(+21 files in other folders)
